# codex-nightshift

./: .gitignore  LICENSE  README.md  codex-nightshift-gui.cmd  codex-nightshift.cmd  pyproject.toml
codex_nightshift/: __init__.py  cli.py  config.py  runner.py  schedule_win.py  state.py  transcripts.py  webui.py
codex_nightshift/web/: app.js  index.html  style.css
tests/: test_runner.py  test_schedule_win.py  test_transcripts.py  test_webui.py
