[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-nightshift"
version = "0.3.1"
description = "Explicitly adopt ordinary Codex sessions and resume them after interruptions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["codex", "automation", "rate-limit", "resume"]

[project.scripts]
codex-nightshift = "codex_nightshift.cli:main"

[tool.setuptools]
packages = ["codex_nightshift"]

[tool.setuptools.package-data]
codex_nightshift = ["web/*.html", "web/*.css", "web/*.js"]
